First Data structure check in

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /DFC.Digital.Tools/DFC.Digital.Tools.Data/obj
+/DFC.Digital.Tools/.vs/DFC.Digital.Tools/v16
+/DFC.Digital.Tools/.vs/DFC.Digital.Tools/DesignTimeBuild
