Added Gov Uk Notify Service

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /DFC.Digital.Tools/DFC.Digital.Tools.Data/obj
 /DFC.Digital.Tools/.vs/DFC.Digital.Tools/v16
 /DFC.Digital.Tools/.vs/DFC.Digital.Tools/DesignTimeBuild
+/DFC.Digital.Tools/DFC.Digital.Tools.Service.GovUkNotify/obj
