--- a/DFC.Digital.Tools/DFC.Digital.Tools.Service.GovUkNotify/DFC.Digital.Tools.Service.GovUkNotify.csproj
+++ b/DFC.Digital.Tools/DFC.Digital.Tools.Service.GovUkNotify/DFC.Digital.Tools.Service.GovUkNotify.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Notify" Version="2.5.0" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.0.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
