App configuration and other supporting files

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,10 @@
 /DFC.Digital.Tools/.vs/DFC.Digital.Tools/v16
 /DFC.Digital.Tools/.vs/DFC.Digital.Tools/DesignTimeBuild
 /DFC.Digital.Tools/DFC.Digital.Tools.Service.GovUkNotify/obj
+/DFC.Digital.Tools/DFC.Digital.Tools.Repository.Pirean/bin/Debug/netcoreapp2.1
+/DFC.Digital.Tools/DFC.Digital.Tools.Repository.Pirean/obj
+/DFC.Digital.Tools/DFC.Digital.Tools.Function.EmailNotification/bin/Debug/netcoreapp2.1
+/DFC.Digital.Tools/DFC.Digital.Tools.Function.EmailNotification/obj
+/DFC.Digital.Tools/DFC.Digtal.Tools.Core/bin/Debug/netcoreapp2.1
+/DFC.Digital.Tools/DFC.Digtal.Tools.Core/obj
+/DFC.Digital.Tools/DFC.Digital.Tools.Service.GovUkNotify/bin/Debug/netcoreapp2.1
