Added Logging and interception

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@
 /DFC.Digital.Tools/DFC.Digtal.Tools.Core/bin/Debug/netcoreapp2.1
 /DFC.Digital.Tools/DFC.Digtal.Tools.Core/obj
 /DFC.Digital.Tools/DFC.Digital.Tools.Service.GovUkNotify/bin/Debug/netcoreapp2.1
+/DFC.Digital.Tools/DFC.Digital.Tools.Core/bin/Debug/netcoreapp2.1
+/DFC.Digital.Tools/DFC.Digital.Tools.Core/obj
