Correcting folder name

--- a/DFC.Digital.Tools/DFC.Digital.Tools.Service.GovUkNotify/DFC.Digital.Tools.Service.GovUkNotify.csproj
+++ b/DFC.Digital.Tools/DFC.Digital.Tools.Service.GovUkNotify/DFC.Digital.Tools.Service.GovUkNotify.csproj
@@ -23,8 +23,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DFC.Digital.Tools.Core\DFC.Digital.Tools.Core.csproj" />
     <ProjectReference Include="..\DFC.Digital.Tools.Data\DFC.Digital.Tools.Data.csproj" />
-    <ProjectReference Include="..\DFC.Digtal.Tools.Core\DFC.Digital.Tools.Core.csproj" />
   </ItemGroup>
 
 </Project>
