--- a/DFC.Digital.Tools/DFC.Digital.Tools.Core/DFC.Digital.Tools.Core.csproj
+++ b/DFC.Digital.Tools/DFC.Digital.Tools.Core/DFC.Digital.Tools.Core.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="4.9.2" />
     <PackageReference Include="Castle.Core" Version="4.4.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
