--- a/DFC.Digital.Tools/DFC.Digital.Tools.Function.EmailNotification/DFC.Digital.Tools.Function.EmailNotification.csproj
+++ b/DFC.Digital.Tools/DFC.Digital.Tools.Function.EmailNotification/DFC.Digital.Tools.Function.EmailNotification.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="4.9.2" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.0.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
