--- a/DFC.Digital.Tools/DFC.Digital.Tools.Function.EmailNotification/DFC.Digital.Tools.Function.EmailNotification.csproj
+++ b/DFC.Digital.Tools/DFC.Digital.Tools.Function.EmailNotification/DFC.Digital.Tools.Function.EmailNotification.csproj
@@ -23,7 +23,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DFC.Digital.Tools.Core\DFC.Digital.Tools.Core.csproj" />
     <ProjectReference Include="..\DFC.Digital.Tools.Data\DFC.Digital.Tools.Data.csproj" />
+    <ProjectReference Include="..\DFC.Digital.Tools.Repository.Pirean\DFC.Digital.Tools.Repository.Pirean.csproj" />
+    <ProjectReference Include="..\DFC.Digital.Tools.Service.GovUkNotify\DFC.Digital.Tools.Service.GovUkNotify.csproj" />
   </ItemGroup>
 
 </Project>
