Ignore bin folder

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 
 /DFC.Digital.Tools/DFC.Digital.Tools.Data/obj
 /DFC.Digital.Tools/.vs/DFC.Digital.Tools/v16
+/DFC.Digital.Tools/.vs/DFC.Digital.Tools/bin/Debug/netcoreapp2.1
 /DFC.Digital.Tools/.vs/DFC.Digital.Tools/DesignTimeBuild
 /DFC.Digital.Tools/DFC.Digital.Tools.Service.GovUkNotify/obj
 /DFC.Digital.Tools/DFC.Digital.Tools.Repository.Pirean/bin/Debug/netcoreapp2.1
