Adding json configuration

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@
 /DFC.Digital.Tools/DFC.Digital.Tools.Core/obj
 /DFC.Digital.Tools/DFC.Digital.Tools.Function.EmailNotification.Console/obj
 /DFC.Digital.Tools/DFC.Digital.Tools.Function.EmailNotification.Console/bin/Debug/netcoreapp2.1
+*.json
