--- a/DFC.Digital.Tools/DFC.Digital.Tools.Function.EmailNotification.Console/DFC.Digital.Tools.Function.EmailNotification.Console.csproj
+++ b/DFC.Digital.Tools/DFC.Digital.Tools.Function.EmailNotification.Console/DFC.Digital.Tools.Function.EmailNotification.Console.csproj
@@ -26,4 +26,10 @@
     <ProjectReference Include="..\DFC.Digital.Tools.Function.EmailNotification\DFC.Digital.Tools.Function.EmailNotification.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
