--- a/DFC.Digital.Tools/DFC.Digital.Tools.Core/DFC.Digital.Tools.Core.csproj
+++ b/DFC.Digital.Tools/DFC.Digital.Tools.Core/DFC.Digital.Tools.Core.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Autofac" Version="4.9.2" />
     <PackageReference Include="Castle.Core" Version="4.4.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="NLog" Version="4.6.2" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.0.2">
