--- a/DFC.Digital.Tools/DFC.Digital.Tools.AzureFunctions/DFC.Digital.Tools.AzureFunctions.csproj
+++ b/DFC.Digital.Tools/DFC.Digital.Tools.AzureFunctions/DFC.Digital.Tools.AzureFunctions.csproj
@@ -25,6 +25,9 @@
     <ProjectReference Include="..\DFC.Digital.Tools.Function.EmailNotification\DFC.Digital.Tools.Function.EmailNotification.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="host.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
