Added low level repository files

--- a/DFC.Digital.Tools/DFC.Digital.Tools.Service.Accounts/DFC.Digital.Tools.Service.Accounts.csproj
+++ b/DFC.Digital.Tools/DFC.Digital.Tools.Service.Accounts/DFC.Digital.Tools.Service.Accounts.csproj
@@ -16,4 +16,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DFC.Digital.Tools.Data\DFC.Digital.Tools.Data.csproj" />
+  </ItemGroup>
+
 </Project>
