--- a/DFC.Digital.Tools/DFC.Digital.Tools.Repository.Accounts/DFC.Digital.Tools.Repository.Accounts.csproj
+++ b/DFC.Digital.Tools/DFC.Digital.Tools.Repository.Accounts/DFC.Digital.Tools.Repository.Accounts.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac" Version="4.9.2" />
+    <PackageReference Include="AutoMapper" Version="8.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.4" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.0.2">
