Added config and autofacmodules

--- a/DFC.Digital.Tools/DFC.Digital.Tools.Function.EmailNotification/DFC.Digital.Tools.Function.EmailNotification.csproj
+++ b/DFC.Digital.Tools/DFC.Digital.Tools.Function.EmailNotification/DFC.Digital.Tools.Function.EmailNotification.csproj
@@ -26,6 +26,7 @@
     <ProjectReference Include="..\DFC.Digital.Tools.Core\DFC.Digital.Tools.Core.csproj" />
     <ProjectReference Include="..\DFC.Digital.Tools.Data\DFC.Digital.Tools.Data.csproj" />
     <ProjectReference Include="..\DFC.Digital.Tools.Repository.Accounts\DFC.Digital.Tools.Repository.Accounts.csproj" />
+    <ProjectReference Include="..\DFC.Digital.Tools.Service.Accounts\DFC.Digital.Tools.Service.Accounts.csproj" />
     <ProjectReference Include="..\DFC.Digital.Tools.Service.GovUkNotify\DFC.Digital.Tools.Service.GovUkNotify.csproj" />
   </ItemGroup>
 
