--- a/DFC.Digital.Tools/DFC.Digital.Tools.Service.GovUkNotify.UnitTests/DFC.Digital.Tools.Service.GovUkNotify.UnitTests.csproj
+++ b/DFC.Digital.Tools/DFC.Digital.Tools.Service.GovUkNotify.UnitTests/DFC.Digital.Tools.Service.GovUkNotify.UnitTests.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <PackageReference Include="FakeItEasy" Version="5.1.1" />
+    <PackageReference Include="FluentAssertions" Version="5.6.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.1" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.0.2">
       <PrivateAssets>all</PrivateAssets>
