Added cuttoff date from settings

--- a/DFC.Digital.Tools/DFC.Digital.Tools.Service.Accounts/DFC.Digital.Tools.Service.Accounts.csproj
+++ b/DFC.Digital.Tools/DFC.Digital.Tools.Service.Accounts/DFC.Digital.Tools.Service.Accounts.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DFC.Digital.Tools.Core\DFC.Digital.Tools.Core.csproj" />
     <ProjectReference Include="..\DFC.Digital.Tools.Data\DFC.Digital.Tools.Data.csproj" />
   </ItemGroup>
 
