--- a/DFC.Digital.Tools/DFC.Digital.Tools.Repository.Accounts.UnitTests/DFC.Digital.Tools.Repository.Accounts.UnitTests.csproj
+++ b/DFC.Digital.Tools/DFC.Digital.Tools.Repository.Accounts.UnitTests/DFC.Digital.Tools.Repository.Accounts.UnitTests.csproj
@@ -7,12 +7,24 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EntityFrameworkCore.Testing.FakeItEasy" Version="1.0.0.1" />
+    <PackageReference Include="FakeItEasy" Version="5.1.1" />
+    <PackageReference Include="FluentAssertions" Version="5.6.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.1" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.0.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DFC.Digital.Tools.Data\DFC.Digital.Tools.Data.csproj" />
+    <ProjectReference Include="..\DFC.Digital.Tools.Repository.Accounts\DFC.Digital.Tools.Repository.Accounts.csproj" />
   </ItemGroup>
 
 </Project>
