--- a/DFC.Digital.Tools/DFC.Digital.Tools.Repository.Accounts.UnitTests/DFC.Digital.Tools.Repository.Accounts.UnitTests.csproj
+++ b/DFC.Digital.Tools/DFC.Digital.Tools.Repository.Accounts.UnitTests/DFC.Digital.Tools.Repository.Accounts.UnitTests.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <AdditionalFiles Include="..\stylecop.json" Link="stylecop.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="EntityFrameworkCore.Testing.FakeItEasy" Version="1.0.0.1" />
     <PackageReference Include="FakeItEasy" Version="5.1.1" />
     <PackageReference Include="FluentAssertions" Version="5.6.0" />
