Added default warning rules to projects and removed this.

--- a/DFC.Digital.Tools/DFC.Digital.Tools.Service.Accounts/DFC.Digital.Tools.Service.Accounts.csproj
+++ b/DFC.Digital.Tools/DFC.Digital.Tools.Service.Accounts/DFC.Digital.Tools.Service.Accounts.csproj
@@ -5,7 +5,9 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile></DocumentationFile>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <WarningsAsErrors />
+    <CodeAnalysisRuleSet>..\DFC.Digital.CodeAnalysis.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
 
   <ItemGroup>
