--- a/DFC.Digital.Tools/DFC.Digital.Tools.Repository.Accounts.UnitTests/DFC.Digital.Tools.Repository.Accounts.UnitTests.csproj
+++ b/DFC.Digital.Tools/DFC.Digital.Tools.Repository.Accounts.UnitTests/DFC.Digital.Tools.Repository.Accounts.UnitTests.csproj
@@ -6,6 +6,12 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <WarningsAsErrors />
+    <CodeAnalysisRuleSet>..\DFC.Digital.CodeAnalysis.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
+
   <ItemGroup>
     <AdditionalFiles Include="..\stylecop.json" Link="stylecop.json" />
   </ItemGroup>
