Copy and paste error

--- a/Resources/AzureDevOps/azure-pipelines.yml
+++ b/Resources/AzureDevOps/azure-pipelines.yml
@@ -12,9 +12,9 @@ steps:
   displayName: 'Use NuGet 4.3.0'
 
 - task: NuGetCommand@2
-  displayName: 'NuGet restore ${{ variables.SolutionBaseName }}'
+  displayName: 'NuGet restore ${{ variables.projectFile }}'
   inputs:
-    restoreSolution: ${{ variables.SolutionBaseName }}
+    restoreSolution: ${{ variables.projectFile }}
 
 # build
 - script:  dotnet build --configuration ${{ variables.buildConfiguration }} ${{ variables.projectFile }}
