Added use of config file

--- a/Resources/AzureDevOps/azure-pipelines.yml
+++ b/Resources/AzureDevOps/azure-pipelines.yml
@@ -12,6 +12,8 @@ steps:
   inputs:
     command: restore
     projects: '**/*.csproj'
+    feedsToUse: config
+    nugetConfigPath: DFC.Digital.Tools\.nuget\NuGet.config
 
 # build
 - task: DotNetCoreCLI@2
