--- a/Resources/AzureDevOps/azure-pipelines.yml
+++ b/Resources/AzureDevOps/azure-pipelines.yml
@@ -1,7 +1,7 @@
 # dotnet core build
 
 variables:
-  SolutionName: ''
+  SolutionName: 'DFC.Digital.Tools'
   BuildPlatform: 'any cpu'
   BuildConfiguration: 'release'
 
