Added verbose build

--- a/Resources/AzureDevOps/azure-pipelines.yml
+++ b/Resources/AzureDevOps/azure-pipelines.yml
@@ -50,6 +50,7 @@ steps:
     command: build
     projects: '**/*.csproj'
     configuration: ${{ variables.buildConfiguration }}
+    arguments: '--verbosity detailed'
 
 # test and publish
 - task: DotNetCoreCLI@2
