--- a/DFC.Digital.Tools/DFC.Digital.Tools.Core/DFC.Digital.Tools.Core.csproj
+++ b/DFC.Digital.Tools/DFC.Digital.Tools.Core/DFC.Digital.Tools.Core.csproj
@@ -17,7 +17,10 @@
   <ItemGroup>
     <PackageReference Include="Autofac" Version="4.9.2" />
     <PackageReference Include="Castle.Core" Version="4.4.0" />
+    <PackageReference Include="Microsoft.ApplicationInsights.NLogTarget" Version="2.9.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="1.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="2.2.4" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
     <PackageReference Include="NLog" Version="4.6.2" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.0.2">
